# gl_loader

./: .gitignore  Cargo.toml  README.md  build.rs
src/: glad.c  glad.h  lib.rs  linux.rs  macos.rs  windows.rs
win/: Cargo.toml  build.rs
win/src/: gl.c  gl.h  glad.c  lib.rs  wgl.c
