[package]
name = "gl_loader"
version = "0.0.3"
authors = ["Maël Naccache Tüfekçi <contact@maeln.com>"]
edition = "2018"
description = "Simple OpenGL function pointer loader."
license = "CECILL-2.1"
repository = "https://github.com/maeln/gl_loader"

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.6"