[package]
name = "gl_loader"
version = "0.1.2"
authors = ["Maël Naccache Tüfekçi <contact@maeln.com>"]
edition = "2018"
description = "Simple OpenGL function pointer loader based on Glad."
license = "CECILL-2.1"
repository = "https://github.com/maeln/gl_loader"
readme = "README.md"
keywords = ["gl", "opengl", "glad", "loader"]
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
